@@ -4457,6 +4457,12 @@ v0.33.19        26-Oct-2001
 		outbound status, nodelist flags etc. Experimental.
 		Added code to do outbound calling, experimental. Calling
 		systems in parallel is now possible.
+		Creates the semafore do_inet if there is an internet node to
+		call even if there's no internet connection. Removes this
+		semafore if there are no internet nodes to call. This can be
+		used by ppp scripts to see if there is work and when there is
+		no more work to do. Not important for permament connected
+		systems.
 
 	mbmon:
 		Changed the lastcaller screen to display the External Door
@@ -4464,6 +4470,7 @@ v0.33.19        26-Oct-2001
 		When lastcaller info is scrolling, the lines are first proper
 		erased.
 		Fixes for Sparc systems.
+		Added support for display do_inet semafore in menu 2.
 
 	mbmsg:
 		Corrected header in logfile for pack function.
